--- a/config/database.yml
+++ b/config/database.yml
@@ -6,14 +6,16 @@
 #
 default: &default
   adapter: postgis
-  username: marcelodev
-  password: '041421'
+  username: postgres
+  password: 'postgres'
   pool: 5
   timeout: 5000
+  schema_search_path: "public, postgis"
 
 development:
   <<: *default
-  database: geobuddy-dev 
+  database: geobuddy-dev
+  script_dir: /usr/share/postgresql/9.3/contrib/postgis-2.1
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
