--- a/test/fixtures/occurrence_types.yml
+++ b/test/fixtures/occurrence_types.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  occurrence_type: MyString
+  name: MyString
 
 two:
-  occurrence_type: MyString
+  name: MyString
