--- a/test/fixtures/occurrences.yml
+++ b/test/fixtures/occurrences.yml
@@ -1,13 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
   description: MyString
-  lat: 1.5
-  long: 1.5
+  coordinate: "POINT (-22.890887287293623 -43.303777406560855)"
 
 two:
-  name: MyString
   description: MyString
-  lat: 1.5
-  long: 1.5
+  coordinate: "POINT (-22.890887285293621 -43.303776706560851)"
