occurrence type fixture added for select option test

--- a/test/fixtures/occurrence_types.yml
+++ b/test/fixtures/occurrence_types.yml
@@ -1,7 +1,16 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: "Accident"
 
 two:
-  name: MyString
+  name: "Robbery"
+
+three:
+  name: "Missing Person"
+
+four:
+  name: "Suspect"
+
+five:
+  name: "Complaint"
